--- a/mipselsf-k3.4/installer/opkg.conf
+++ b/mipselsf-k3.4/installer/opkg.conf
@@ -1,4 +1,4 @@
-src/gz entware http://gh-proxy.markxu.vip/https://raw.githubusercontent.com/shiruixuan/entware/main/mipselsf-k3.4
+src/gz entware https://raw.githubusercontent.com/shiruixuan/entware/main/mipselsf-k3.4
 dest root /
 lists_dir ext /opt/var/opkg-lists
 arch all 100
